--- a/resp/gateway-dev.properties
+++ b/resp/gateway-dev.properties
@@ -1,6 +1,6 @@
 gateway.salt_default_key=SGVsbG9Ub21teVExMjM0NTZAQDEyMzQ1NiE=
 gateway.jwt_default_key=PXRvbW15UTMwNTA1MDQwMTE5KEFCQykr
 
-gateway.gateway_url=http://localhost:8080/api/gateway2
+gateway.gateway_url=http://localhost:8080/api/gateway
 gateway.gateway_nonce_timeout_seconds=120
 gateway.allow_ip_list=127.0.0.1
