--- a/resp/gateway-code-dev.properties
+++ b/resp/gateway-code-dev.properties
@@ -1,5 +1,5 @@
-gateway01=\u53C2\u6570[{0}]\u4E0D\u80FD\u4E3A\u7A7A
-gateway02=\u8BF7\u6C42\u65F6\u95F4\u975E\u6CD5\u6216\u5DF2\u8FC7\u671F
+code.gateway01=\u53C2\u6570[{0}]\u4E0D\u80FD\u4E3A\u7A7A
+code.gateway02=\u8BF7\u6C42\u65F6\u95F4\u975E\u6CD5\u6216\u5DF2\u8FC7\u671F
 gateway03=\u8BF7\u4E0D\u8981\u91CD\u590D\u6295\u653E\u968F\u673A\u6570
 gateway04=\u9A8C\u8BC1\u7B7E\u540D\u5931\u8D25
 gateway05=\u975E\u6CD5\u7684appId\u53C2\u6570
