--- a/resp/gateway-sc-dev.properties
+++ b/resp/gateway-sc-dev.properties
@@ -2,6 +2,6 @@ sc.hello_string={cipher}504e1cfef45c8955e9c4d31a9bd0d9a487f1390ce42d1126014ce872
 sc.salt_default_key=SGVsbG9Ub21teVExMjM0NTZAQDEyMzQ1NiE=
 sc.jwt_default_key=PXRvbW15UTMwNTA1MDQwMTE5KEFCQykr
 
-sc.gateway_url=http://localhost:8080/api/gateway
+sc.gateway_url=http://localhost:9090/api/gateway
 sc.gateway_nonce_timeout_seconds=90
-sc.allow_ip_list=127.0.0.1,172.29.32.148
+sc.allow_ip_list=
